--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello!
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+        
+        <h1>Hello! This is my website!</h1>
+
+        <p>Isn't it awesome?!</p>
+
+        <strong>It is!</strong> Is it? <em>Awesome!</em>
+
+
+        <p>
+            <a href="https://etsy.com/"><img src="IMG_8115.jpeg" alt=""></a>
+        </p>
+
+        <ul>
+            <li>Unicorns</li>
+            <li>Bacon</li>
+            <li>Benben</li>
+        </ul>
+
+        <p><a href="page2.html">Go to the second page</a></p>
+
+        <form action="thanks.html">
+            <label for="name">Your name:</label>
+            <input type="text" name="name" id="name">
+            <button>Submit!</button>
+        </form>
+    </body>
+</html>
